Fix MapNav z-index

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@
   overflow: hidden;
   position: absolute;
   z-index: 1;
-  height: 100%;
   width: 100%;
 }
 
@@ -24,12 +23,14 @@
 }
 
 .map-sidebar {
-  position: relative;
+  position: absolute;
   width: 250px;
-  height: 100%;
+  margin-top: 75px;
+  height: calc(100% - 76px);
   background-color: white;
   border-top: 1px solid;
   transform: translate(-250px);
+  z-index: 1;
 }
 
 .sidebar-input {
